--- a/style.css
+++ b/style.css
@@ -2,8 +2,22 @@ body{
     background-color: #18B274;
     padding: 0;
     margin: 0;
+    color: #FFF;
+    text-align: center;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    overflow-x: hidden; /* fix animation issue */
 }
 
+.title{
+    left: 50%;
+    top: 50%;
+    position: absolute;
+    transform: translate(-50%, -50%);
+}
+
+a{
+    color: #FFF;
+}
 .menu{
     display:flex;
     flex-wrap: nowrap;
@@ -12,84 +26,71 @@ body{
     position: absolute;
     width: 100%;
     bottom: 0;
-    padding-bottom: 10px;
-    overflow: hidden;
 }
 
 .menu__item{
-    width: 20px;
-    height: 20px;
-    padding: 20px;
+    width: 25px;
+    height: 25px;
+    padding: 15px 15px 45px 15px;
     position: relative;
+    cursor: pointer;
+}
+
+.menu__item:active img{
+    opacity: 1;
 }
 
 .menu__item img{
     position: relative;
-    z-index: 2;
-}
-
-.menu__item:first-child:before{
-    content: "";
-    background-color: #18B274;
-    z-index: 0;
     width: 100%;
     height: 100%;
-    position: absolute;
-    top: 0;
-    left: 0;
-    border-radius: 0 0 50% 50%;
+    opacity: 0.4;
 }
 
-.menu__item:first-child:after{
-    content: "";
-    background-color: #FFF;
-    z-index: 0;
-    width: 80%;
-    height: 80%;
-    position: absolute;
-    top: 0;
-    left: 5px;
-    z-index: 1;
-}
-
-
-  
+/* Shadow for active menu*/
 .menu__shadow{
-    background-color: #18B274;
-    width: 50px;
-    height: 50px;
-    border-radius: 0 0 50% 50%;
+    width: 70px;
+    height: 70px;
     position: absolute;
+    transition: left 600ms cubic-bezier(0.175, 0.885, 0.32, 1.275);
     left: 0;
-    transition: left 800ms cubic-bezier(0.175, 0.885, 0.32, 1.275);
-  }
-  
-.menu__shadow::after,
+}
+
+.menu__shadow svg{
+    position: absolute;
+    top: -58px;
+    left: -50%;
+    width: 200%;
+    height: 200%;
+}
+
+
+.menu__shadow-icon{
+    position: absolute;
+    width: 36%;
+    height: 36%;
+    left: 50%;
+    transform: translateX(-50%);
+    top: 7%;
+    z-index: 2;
+    transition:opacity 300ms ease-out;
+
+}
+
+.menu__shadow-icon.hide{
+    opacity: 0;
+}
+
 .menu__shadow::before{
     content: "";
     background-color: #FFF;
-    width: 50px;
-    height: 50px;
-    position: absolute;
     border-radius: 50%;
-    z-index: 2;
-    top: -10px;
-  }
-  
-.menu__shadow::before{
-      right: 100%;
-  }
-  
-.menu__shadow::after{
-      left: 100%;
-  }
-
-.menu__shadow-mask{
-    background-color: #18B274;
-    height: 20px;
-    left: 50%;
-    transform: translatex(-50%);
+    width: 72%;
+    height: 72%;
     position: absolute;
-    width: calc(100% + 50%);
+    left: 50%;
+    top: -8px;
+    transform: translateX(-50%);
     z-index: 1;
-  }
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px, rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
+}
